--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,7 @@
 ################################################
 
 elide:
-  modelPackage: 'example.models'
+  modelPackage: "example.models"
   json-api:
     path: /api/v1
     enabled: true
@@ -45,20 +45,20 @@ spring:
     hibernate:
       show_sql: true
       naming:
-        physical-strategy: 'org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl'
-      dialect: 'org.hibernate.dialect.H2Dialect'
+        physical-strategy: "org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl"
+      dialect: "org.hibernate.dialect.H2Dialect"
       jdbc:
         use_scrollable_resultset: true
   datasource:
-    url: 'jdbc:h2:mem:db1;DB_CLOSE_DELAY=-1'
-    username: 'sa'
-    password: ''
-    driver-class-name: 'org.h2.Driver'
+    url: "jdbc:h2:mem:db1;MODE=LEGACY;DB_CLOSE_DELAY=-1;"
+    username: "sa"
+    password: ""
+    driver-class-name: "org.h2.Driver"
   liquibase:
-    change-log: 'classpath:db/changelog/changelog.xml'
+    change-log: "classpath:db/changelog/changelog.xml"
     enabled: true
   activemq:
-    broker-url: 'vm://embedded?broker.persistent=false,useShutdownHook=false'
+    broker-url: "vm://embedded?broker.persistent=false,useShutdownHook=false"
     in-memory: true
 
 server:
@@ -81,15 +81,15 @@ spring:
     hibernate:
       show_sql: true
       naming:
-        physical-strategy: 'org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl'
-      dialect: 'org.hibernate.dialect.PostgreSQLDialect'
+        physical-strategy: "org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl"
+      dialect: "org.hibernate.dialect.PostgreSQLDialect"
       jdbc:
         use_scrollable_resultset: true
   datasource:
     url: ${JDBC_DATABASE_URL}
     username: ${JDBC_DATABASE_USERNAME}
     password: ${JDBC_DATABASE_PASSWORD}
-    driver-class-name: 'org.postgresql.Driver'
+    driver-class-name: "org.postgresql.Driver"
   liquibase:
     enabled: false
 server:
